Always have scroll bar for window to prevent jumping
See:
http://stackoverflow.com/questions/12582555/always-show-browser-scrollbar-to-prevent-page-jumping

--- a/WebContent/css/survey.css
+++ b/WebContent/css/survey.css
@@ -8,6 +8,7 @@ html, body {
     width: 100%;
     margin: 0;
     padding: 0;
+    overflow-y: scroll;
 }
 
 body {
